<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TpAuthentification</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="valider">Valider</string>
    <string name="effacer">Effacer</string>
    <string name="retour">Retour</string>
    <string name="title_activity_accueil">AccueilActivity</string>
    <string name="imie">imie</string>
    <string name="angersMag">Angers Mag</string>
    <string name="youtube">YouTube</string>
    <string name="votreMotDePasseEst">Votre mot de passe est : </string>
    <string name="bienvenue">Bienvenue</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="quitter">Quitter</string>
	
</resources>
