<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tpauthentification.activity.AccueilActivity"
    android:orientation="vertical">

    <TextView
            android:id="@+id/txtViewBienvenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenue" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtViewVotreMotDePasseEst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/votreMotDePasseEst" />
        
        <TextView
            android:id="@+id/txtViewVotreMotDePasseEstValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
    </LinearLayout>

    <Button
        android:id="@+id/btnImie"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/imie" />

    <Button
        android:id="@+id/btnAngersMag"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/angersMag" />

    <Button
        android:id="@+id/btnYoutube"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/youtube" />

    <Button
        android:id="@+id/btnRetour"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/retour" />
    
</LinearLayout>
